--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,9 +5,7 @@
     "go.gopath": "",
     "go.testOnSave": true,
     "editor.formatOnSave": true,
-    "jsonnet.languageServer.tankaMode": false,
-    "jsonnet.languageServer.jpath": [
-        "infra/manifests/jsonnet/vendor",
-        "infra/manifests/jsonnet/lib"
-    ],
+    "editor.codeActionsOnSave": {
+        "source.organizeImports": "always",
+    },
 }
