--- a/src/apps/Taskfile.yaml
+++ b/src/apps/Taskfile.yaml
@@ -2,46 +2,60 @@ version: '3'
 
 vars:
   HOST_STORAGE_ROOT: /var/lib/dokku/data/storage/
-  APP_NAME: "{{.APP_NAME}}"
   APP_KIND: "{{if .APP_KIND}}{{.APP_KIND}}{{else}}git{{end}}"
   APP_RUNTIME: "{{if .APP_RUNTIME}}{{.APP_RUNTIME}}{{else}}python{{end}}"
+  
 tasks:
   dir: "{{ .USER_WORKING_DIR }}"
-  dokku:
+  create:
     cmds:
-      - ssh -t dokku@brntgarlic dokku {{.CLI_ARGS}}
+      - |
+        mkdir -p {{ .CLI_ARGS }}
+        echo "APP_NAME={{ .CLI_ARGS }}" > {{ .CLI_ARGS }}/app
+        echo "ENV=production" > {{ .CLI_ARGS }}/env
+        cat > {{ .CLI_ARGS }}/Taskfile.yaml <<- EOM
+        version: '3'
+
+        dotenv: ['env', 'app']
+
+        includes:
+          app: ../Taskfile.yaml
+
+        tasks:
+          hi:
+            dir: "{{"{{"}} .TASKFILE_DIR {{"}}"}}"
+            cmds:
+              - echo "hello"
+        EOM
   init:
+    env:
+      APP_NAME: "{{.APP_NAME}}"
     cmds:
-      - task -x app:dokku -- apps:exists {{ .APP_NAME }} || task app:dokku -- apps:create {{ .APP_NAME }}
+      - echo {{.APP_NAME}}
+      - dokku apps:exists || dokku apps:create
       - task: push_env
-      - task -x app:dokku -- letsencrypt:set {{ .APP_NAME }} email voidfiles@gmail.com
-      - task -x app:dokku -- letsencrypt:active {{ .APP_NAME }} || task app:dokku -- letsencrypt:enable {{ .APP_NAME }} 
+      - dokku letsencrypt:set email voidfiles@gmail.com
+      - dokku letsencrypt:active | grep true || dokku letsencrypt:enable
       - |
         {{ if .APP_VOLUME }}
-          task app:dokku -- storage:ensure-directory {{ .APP_NAME }}
-          task -x app:dokku -- storage:list scrapoxy | grep "/var/lib/dokku/data/storage/scrapoxy" || \
-            task app:dokku -- storage:mount {{ .APP_NAME }} {{.HOST_STORAGE_ROOT}}{{ .APP_NAME }}:/etc/scrapoxy
+          dokku storage:ensure-directory
+          dokku storage:list | grep "/var/lib/dokku/data/storage/{{ .APP_NAME }}" || \
+            dokku storage:mount {{.HOST_STORAGE_ROOT}}{{ .APP_NAME }}:{{.APP_VOLUME}}
         {{ end }}
       - task: build
       - task: deploy
-  deploy:
-    vars:
-      IMAGE: "{{if .FROM_IMAGE}}{{.FROM_IMAGE}}{{else}}ghcr.io/voidfiles/{{ .APP_NAME }}:latest{{end}}"
-    cmds:
-      - ssh -t dokku@brntgarlic docker pull {{ .IMAGE }}
-      - task: deploy_{{.APP_KIND}}
-  deploy_from_image:
-    cmds:
-      - task app:dokku -- ps:report {{ .APP_NAME }} --deployed || task app:dokku -- git:from-image {{ .APP_NAME }} {{ .FROM_IMAGE }}:latest
-  deploy_git:
-    cmds:
-      - task app:dokku -- git:from-image {{ .APP_NAME }} ghcr.io/voidfiles/{{ .APP_NAME }}:latest
   build:
     cmds:
       - task: build_{{.APP_KIND}}_{{.APP_RUNTIME}}
+
   build_from_image_docker:
+    dir: "{{ .TASKFILE_DIR }}"
     cmds:
-      - echo "Not required"
+      - |
+        docker build --platform linux/amd64 \
+          -t ghcr.io/voidfiles/{{ .APP_NAME }}:latest {{ .APP_NAME }} 
+      - docker push ghcr.io/voidfiles/{{ .APP_NAME }}:latest
+
   build_git_python:
     dir: "{{ .TASKFILE_DIR }}"
     cmds:
@@ -50,19 +64,30 @@ tasks:
           --platform linux/amd64 \
           -t ghcr.io/voidfiles/{{ .APP_NAME }}:latest {{ .APP_NAME }} 
       - docker push ghcr.io/voidfiles/{{ .APP_NAME }}:latest
+
   build_local:
     dir: "{{ .TASKFILE_DIR }}"
     cmds:
       - |
         docker build --file=../build/Dockerfile.{{.APP_RUNTIME}} \
           -t ghcr.io/voidfiles/{{ .APP_NAME }}:latest {{ .APP_NAME }}
+
+  deploy:
+    vars:
+      IMAGE: "{{if .FROM_IMAGE}}{{.FROM_IMAGE}}{{else}}ghcr.io/voidfiles/{{ .APP_NAME }}:latest{{end}}"
+      FULL_IMAGE:
+        sh: docker inspect --format='{{"{{"}}index .RepoDigests 0{{"}}"}}' {{.IMAGE}}
+    cmds:
+      - ssh -t dokku@brntgarlic docker pull {{ .FULL_IMAGE }}
+      - dokku git:from-image {{.FULL_IMAGE}}
+
   push_env:
     vars:
       ENV_VARS:
         sh: cat env
       PARSED_VARS: '{{ splitList "\n" .ENV_VARS | join " " }}'
     cmds:
-      - task app:dokku -- config:set {{ .APP_NAME }} {{.PARSED_VARS}}
+      - dokku config:set {{.PARSED_VARS}}
   debug:
     cmds:
       - env
@@ -70,7 +95,7 @@ tasks:
       - echo "{{spew .APP_KIND}}"
   logs:
     cmds:
-      - task app:dokku -- logs {{.APP_NAME}}
+      - dokku logs
   ports:
     cmds:
-      - task app:dokku -- ports:list {{.APP_NAME}}
+      - dokku ports:list
