--- a/src/apps/clipper/pyproject.toml
+++ b/src/apps/clipper/pyproject.toml
@@ -11,11 +11,16 @@ fastapi = "^0.111.0"
 httpx = "^0.27.0"
 tenacity = "^8.4.2"
 html-sanitizer = "^2.4.4"
-readability-lxml = "^0.8.1"
 markdownify = "^0.12.1"
 jinja2 = "^3.1.4"
 hishel = "^0.0.29"
 markdown2 = "^2.4.13"
+courlan = "^1.2.0"
+htmldate = "^1.8.1"
+chardet = "^5.2.0"
+cssselect = "^1.2.0"
+url-normalize = "^1.4.3"
+w3lib = "^2.2.1"
 
 
 [tool.poetry.group.dev.dependencies]
