--- a/src/apps/pproxy/pyproject.toml
+++ b/src/apps/pproxy/pyproject.toml
@@ -16,6 +16,9 @@ async-pool = "^0.1.4"
 async-timeout = "^4.0.3"
 aiocron = "^1.8"
 aiojobs = "^1.2.1"
+pytest = "^8.3.0"
+pytest-asyncio = "^0.23.8"
+pytest-timeout = "^2.3.1"
 
 
 [build-system]
